@@ -2,7 +2,7 @@
                           rwindowcatcher.h  -  description
                              -------------------
     begin                : Wed May 4 2005
-    copyright            : (C) 2005, 2006, 2009, 2010, 2011, 2012 by Thomas Friedrichsmeier
+    copyright            : (C) 2005 - 2013 by Thomas Friedrichsmeier
     email                : tfry@users.sourceforge.net
  ***************************************************************************/
 
@@ -157,6 +157,7 @@ public slots:
 	void setKilledInR () { killed_in_r = true; };
 private slots:
 	void doEmbed ();
+	void forceClose ();
 private:
 	void reEmbed ();
 	void rCommandDone (RCommand *command);
